unpackaged/main/default/objects/Course_Section__c/Course_Section__c.object-meta.xml
<CustomObject>
    <label>Course Section</label>
    <nameField>
        <label>Section Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>