unpackaged/main/default/objects/Course_Section__c/fields/College_of_the_Siskiyous_CRN__c.field-meta.xml
<CustomField>
    <fullName>College_of_the_Siskiyous_CRN__c</fullName>
    <label>College of the Siskiyous CRN #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>