unpackaged/main/default/objects/Course_Section__c/fields/Course_Section__c.field-meta.xml
<CustomField>
    <fullName>Course_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Section</label>
    <referenceTo>Course_Offering__c</referenceTo>
    <relationshipLabel>Course Sections</relationshipLabel>
    <relationshipName>Course_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>