unpackaged/main/default/objects/Course_Section__c/fields/Days_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Days_Scheduled__c</fullName>
    <inlineHelpText>Which days will this course section be meeting for class?</inlineHelpText>
    <label>Days Scheduled</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>