unpackaged/main/default/objects/Course_Section__c/fields/Richard_Bland_CRN__c.field-meta.xml
<CustomField>
    <fullName>Richard_Bland_CRN__c</fullName>
    <label>Richard Bland CRN #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>